--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starwars-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "Helps you find the characters you are looking for",
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.3"
@@ -9,8 +9,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server6.js",
-    "watch": "nodemon server6.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
